Fix : show_name_5

--- a/templates/name.html
+++ b/templates/name.html
@@ -24,8 +24,8 @@
 <body>
     <h2>챗봇 사용을 위해 이름을 입력해주세요</h2>
     <form method="POST" action="/name">
-        <input type="text" name="name" placeholder="이름을 입력하세요" required>
-        <br>
+        <label for="username">이름:</label>
+        <input type="text" id="username" name="username" required>
         <button type="submit">시작하기</button>
     </form>
 </body>
